--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# ignore files
+/data/*
+/dump/*
+/output/*
+/publish/*
+/weights/*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
